k8s/istio/virtual-services.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: backend-virtual-service
  namespace: mercadolibre
spec:
  hosts:
  - backend
  - backend.merli.leandrodamasio.com
  gateways:
  - mesh
  - istio-system/mercadolibre-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: backend
        subset: blue
      weight: 100
    - destination:
        host: backend
        subset: green
      weight: 0
    retries:
      attempts: 3
      perTryTimeout: 30s
      retryOn: 5xx
    timeout: 60s
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-virtual-service
  namespace: mercadolibre
spec:
  hosts:
  - frontend
  - merli.leandrodamasio.com
  gateways:
  - mesh
  - istio-system/mercadolibre-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend
        subset: blue
      weight: 100
    - destination:
        host: frontend
        subset: green
      weight: 0
    retries:
      attempts: 3
      perTryTimeout: 30s
      retryOn: 5xx
    timeout: 60s
